add routes for get and post requests

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,6 @@
   <div id="descriptionApp" class="description-container"></div>
   <div id="pledgeApp" class="pledge-container"></div>
   <div id="commentsApp" class="comments-container"></div>
-  <script type="text/javascript" src="http://ec2-18-233-10-117.compute-1.amazonaws.com/bundle.js"></script>
+  <script type="text/javascript" src="http://ec2-3-88-85-118.compute-1.amazonaws.com/19//bundle.js"></script>
 </body>
 </html>
