--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,15 @@
 <head>
   <meta charset="utf-8" />
   <title>Hackstarter</title>
-  <link rel="stylesheet" type="text/css" href="./styles.css">
+  <link rel="stylesheet" type="text/css" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
 </head>
 <body>
-  <div id="descriptionApp" class="description-container"></div>
+  <div id="containerComponent" class="description-container"></div>
   <div id="pledgeApp" class="pledge-container"></div>
-  <div id="commentsApp" class="comments-container"></div>
-  <script type="text/javascript" src="http://ec2-3-88-85-118.compute-1.amazonaws.com/19//bundle.js"></script>
+  <div id="commentRoot" class="comments-container"></div>
+  <script type="text/javascript" src="http://ec2-3-88-85-118.compute-1.amazonaws.com/bundle.js"></script>
+  <script type="text/javascript" src="http://ec2-52-91-5-216.compute-1.amazonaws.com/bundle.js"></script>
+  <script type="text/javascript" src="http://ec2-18-212-186-210.compute-1.amazonaws.com/bundle.js"></script>
 </body>
 </html>
