adjust app.use rout

--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,9 @@
   <div id="containerComponent" class="description-container"></div>
   <div id="pledgeApp" class="pledge-container"></div>
   <div id="commentRoot" class="comments-container"></div>
-  <script type="text/javascript" src="http://ec2-3-88-85-118.compute-1.amazonaws.com/bundle.js"></script>
-  <script type="text/javascript" src="http://ec2-52-91-5-216.compute-1.amazonaws.com/bundle.js"></script>
-  <script type="text/javascript" src="http://ec2-18-212-186-210.compute-1.amazonaws.com/bundle.js"></script>
+  <script type="text/javascript" src="http://ec2-3-88-85-118.compute-1.amazonaws.com/x/bundle.js"></script>
+  <script type="text/javascript" src="http://ec2-52-91-5-216.compute-1.amazonaws.com/x/bundle.js"></script>
+  <script type="text/javascript" src="http://ec2-18-212-186-210.compute-1.amazonaws.com/x/bundle.js"></script>
 </body>
 
 </html>
