--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8" />
   <title>Hackstarter</title>
-  <link href="https://fonts.googleapis.com/css?family=Titan+One" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Titan+One" rel="stylesheet" type="text/css"/>
+  <link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet"type="text/css"/>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
-  <link rel="stylesheet" type="text/css" href="http://ec2-3-88-85-118.compute-1.amazonaws.com/styles.css">
-  <link rel="stylesheet" type="text/css" href="http://ec2-52-91-5-216.compute-1.amazonaws.com/style.css">
-  <link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="http://ec2-3-88-85-118.compute-1.amazonaws.com/x/styles.css"/>
+  <link rel="stylesheet" type="text/css" href="http://ec2-52-91-5-216.compute-1.amazonaws.com/x/style.css"/>
+  <link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet"/>
 </head>
 
 <body>
