Remove unneeded depedencies

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,8 @@
   <div id="commentRoot" class="comments-container"></div>
   <!-- <script type="text/javascript" src="http://ec2-3-88-85-118.compute-1.amazonaws.com/x/bundle.js"></script> -->
   <!-- <script type="text/javascript" src="http://ec2-52-91-5-216.compute-1.amazonaws.com/x/bundle.js"></script> -->
-  <script type="text/javascript" src="http://3.219.86.63/bundle.js"></script>
+  <script src="http://localhost:3011/bundle.js"></script>
+  <!-- <script src="http://3.219.86.63/bundle.js"></script> -->
 </body>
 
 </html>
