Implement Docker image

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <meta charset="utf-8" />
-  <title>Hackstarter</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <!-- <link href="https://fonts.googleapis.com/css?family=Titan+One" rel="stylesheet" type="text/css" />
   <link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
@@ -11,6 +12,7 @@
   <link rel="stylesheet" type="text/css" href="http://ec2-3-88-85-118.compute-1.amazonaws.com/x/styles.css" />
   <link rel="stylesheet" type="text/css" href="http://ec2-52-91-5-216.compute-1.amazonaws.com/x/style.css" />
   <link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet" /> -->
+  <title>Punchstarter: Punch Your Way to the Top</title>
 </head>
 
 <body>
