--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <!-- <link href="https://fonts.googleapis.com/css?family=Titan+One" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" type="text/css" href="http://35.170.201.180/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Titan+One" rel="stylesheet" type="text/css" />
   <link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
-  <link rel="stylesheet" type="text/css" href="http://ec2-3-88-85-118.compute-1.amazonaws.com/x/styles.css" />
+  <!-- <link rel="stylesheet" type="text/css" href="http://ec2-3-88-85-118.compute-1.amazonaws.com/x/styles.css" />
   <link rel="stylesheet" type="text/css" href="http://ec2-52-91-5-216.compute-1.amazonaws.com/x/style.css" />
   <link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet" /> -->
   <title>Punchstarter: Punch Your Way to the Top</title>
+  <style>
+    .info-left {
+      max-width: 900px;
+      text-align: center;
+    }
+  </style>
 </head>
 
 <body>
@@ -21,7 +28,7 @@
   <div id="commentRoot" class="comments-container"></div>
   <!-- <script type="text/javascript" src="http://ec2-3-88-85-118.compute-1.amazonaws.com/x/bundle.js"></script> -->
   <!-- <script type="text/javascript" src="http://ec2-52-91-5-216.compute-1.amazonaws.com/x/bundle.js"></script> -->
-  <!-- <script src="http://localhost:3011/bundle.js"></script> -->
+  <script src="http://35.170.201.180/bundle.js"></script>
   <script src="http://3.219.86.63/bundle.js"></script>
 </body>
 
